# bert_coref_hu

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker/: entrypoint.sh
examples/: pos_nocoref_fullmatch.txt  pos_nocoref_partmatch.txt  sweep.yaml
src/bert_coref/: __init__.py  argument_handling.py  baseline.py  callbacks.py  conll2jsonl.py  filter_coref_train.py  group_sentences.py  losses.py  metrics.py  relabel.py  triplet_train.py
src/bert_coref/clustering/: __init__.py  apply_pca.py  cluster.py  clustering_metrics.py  evaluate_clustering.py  plot_coref.py  plot_coref_relation.py  plot_tokens.py
src/bert_coref/scripts_utils/: precision_recall.awk
test/: test_losses.py  test_metrics.py  test_triplet_train.py
test/clustering/: test_clustering_metrics.py
