[tool.poetry]
name = "bert_coref"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.1"
datasets = "^2.2.2"
transformers = "^4.18.0"
wandb = "^0.12.17"
jsonlines = "^3.0.0"
tensorflow-addons = "^0.17.0"
sklearn = "^0.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
